# whiteboard

./: .gitignore  pyproject.toml
board/: consumer.py  models.py
board/migrations/: 0001_initial.py  0002_auto_20200223_0318.py  0003_board_version.py
web/: package-lock.json  package.json
web/src/: index.ts
web/src/lib/: whiteboard.ts
whiteboard/: routing.py  settings.py  urls.py
whiteboard/templates/: index.html
