[tool.poetry]
name = "whiteboard"
version = "0.1.0"
description = ""
authors = ["shen <dustet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
black = "^19.10b0"
flake8 = "^3.7.9"
channels = "^2.4.0"
channels-redis = "^2.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
